--- a/Daily_Report_KulaphongJ.Rmd
+++ b/Daily_Report_KulaphongJ.Rmd
@@ -5,6 +5,10 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
+Date: 2024/01/28
+- Developed geo-heat map that can receive other factors, including rating, review count, and price.
+- Added function docstring
+
 Date: 2024/01/26
 - Developed geo-heat map of price plots.
 
