Updated 'analyze' functions to include prompts/plotting functionality

--- a/Activity Logs/Daily_Report-CraigAdlam.Rmd
+++ b/Activity Logs/Daily_Report-CraigAdlam.Rmd
@@ -9,6 +9,13 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+Date: 2024/02/02  
+- Excluded API key, and environmental variable from function  
+- Included plot functions within both 'analyze' functions to return the plot  
+--- This ensures the dataframe, parameter list, and plot are returned  
+- Added prompts and error handling for incorrect parameters  
+--- This ensures parameters must be entered if there is an empty function call
+
 Date: 2024/02/01  
 - Saved multiple images from functionality function calls with different categories  
 - Decided to split the AnalyzeRatings function into two separate functions  
