--- a/Activity Logs/Daily_Report_KulaphongJ.Rmd
+++ b/Activity Logs/Daily_Report_KulaphongJ.Rmd
@@ -5,33 +5,44 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-Date: 2024/02/03
+Date: 2024/02/06  
+- Fixed load library dependencies.
+- Added information into README, and vignette.
+
+Date: 2024/02/05  
+- Added more options factors for create_geo_heatmap function.
+- Organized codes for building package.
+- Built the package.
+- Added the package to GitHub Action for CI.
+- Get the codes coverage.
+ 
+Date: 2024/02/03  
 - Renamed geo_heatmap function to create_geo_heatmap.
 - Renamed geo_heatmap.Rd to create_geo_heatmap.Rd.
 - Added information in the DESCRIPTION.
-- Explored to make R package and use Github Action for CI.
+- Explored and Tested to make R package and use GitHub Action for CI.
 
-Date: 2024/02/01
+Date: 2024/02/01  
 - Helped Nijiati fix data stacking bug in the search_businesses function.
 - Tested geo_heatmap with data, getting from the search_businesses function.
 - Added details in the geo_heatmap.Rd
 
-Date: 2024/01/31
+Date: 2024/01/31  
 - Explored how to make R package, get coverage of the codes, and use Travis CI for CI.
 - Re-Organized folders and files
 
-Date: 2024/01/28
+Date: 2024/01/28  
 - Developed geo-heat map that can receive other factors, including rating, review count, and price.
 - Added function docstring
 
-Date: 2024/01/26
+Date: 2024/01/26  
 - Developed geo-heat map of price plots.
 
-Date: 2024/01/25  
+Date: 2024/01/25    
 - Wrapped up ideas and wrote a proposal.
 - Studied how to plot heat-map on a map.
 
-Date: 2024/01/24  
+Date: 2024/01/24    
 - Explored Yelp APIs.  
 - Tested Yelp APIs.  
 - brainstormed ideas for wrapping Yelp APIs.  
